--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,35 +8,71 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>Work</h1>
     <div class="container">
-        <h2>Disigning Dashboards</h2>
-        <img src="img1.png" alt="img1">
-        <span>2020</span>
-        <p>Dashboard</p>
-        <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        
+        <div class="flex">
+            <img src="img1.png" alt="img1">
+            <div>
+                <h2>Disigning Dashboards</h2>
+                <p> <span>2020</span> Dashboard</p>
+                <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                    consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+        </div>
+        <div class="flex">
+            <img src="img2.png" alt="img2">
+            <div>
+                <h2>Disigning Dashboards</h2>
+                <p> <span>2020</span> Dashboard</p>
+                <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                    consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+        </div>
+        <div class="flex">
+            <img src="img3.png" alt="img3">
+            <div>
+                <h2>Vibrant Portraits of 2020</h2>
+                <p> <span>2018</span> Typography</p>
+                <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                    consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            </div>
+        </div>
+
+
     </div>
-    <div class="container">
-        <h2>Vibrant Portraits of 2020</h2>
+
+        <!-- <h2>Vibrant Portraits of 2020</h2>
         <img src="img2.png" alt="img2">
-        <span>2018</span>
-        <p>Illustration</p>
-        <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-    </div>
-    <div class="container">
-    <h2>36 Days of Malayalam type</h2>
-    <img src="img3.png" alt="img3">
-    <span>2018</span>
-    <p>Typography</p>
-    <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-    </div>
-    <div class="container">
-    <h2>Components</h2>
-    <img src="img4.png" alt="img4">
-    <span>2018</span>
-    <p>Components, Design</p>
-    <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-    </div>
+
+        <div class="flex">
+            <span>2018</span>
+            <p>Illustration</p>
+            <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </div>
+
+        <h2>36 Days of Malayalam type</h2>
+        <img src="img3.png" alt="img3">
+
+        <div class="flex">
+            <span>2018</span>
+            <p>Typography</p>
+            <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </div>
+
+        <h2>Components</h2>
+        <img src="img4.png" alt="img4">
+
+        <div class="flex">
+            <span>2018</span>
+            <p>Components, Design</p>
+            <p class="text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+        </div> -->
 </body>
+
 </html>
